# cs-notes

./: .gitignore  .gitmodules  README.md
Algorithm/: CMakeLists.txt  eight_queen_puzzle.cc  generating_permutations.cc  generating_subsets.cc  subarray_sum.cc  two_sum.cc
CUDA/: .gitignore
CUDA/cuda/: CMakeLists.txt  README.md  uva_add_grid.cu  uva_add_grid_mapped_memory_one_pointer.cu  uva_add_grid_mapped_memory_two_pointers.cu  uva_add_grid_prefetch.cu
CUDA/multi_gpu_mpi/: lower_bound.cu  main.cc  makefile
CUDA/rmm/: CMakeLists.txt  README.md  test_bin_pool.cc  test_rmm.cc
CUDA/thrust/: .gitignore  CMakeLists.txt  README.md  copy.cc  copy_cpu_vector_to_device.cc  device_pointer.cc  device_reference.cc  device_vector.cc  device_vector_default_init.cc  device_vector_test.cc  hello_thrust.cc  linked_list.cc  new_copy.cc  nsight_report.qdrep  profile.sh  push_back.cc  raw_pointer.cc  struct_linked_list.cc  sum.cc  test_make_tuple.cc  test_remove_if.cc  vec_of_device_ptr.cc  vec_of_vec.cc
CUDA/thrust/.cache/clangd/index/: hello_thrust.cc.10D00621EA9B0159.idx
CUDA/uva/: CMakeLists.txt
DGL/: 3_message_passing.ipynb
DGL/Blitz/: 1_introduction.ipynb  2_dglgraph.ipynb  3_message_passing.ipynb  4_link_predict.ipynb  5_graph_classification.ipynb  6_load_data.ipynb
DGL/Models/: gat.ipynb  gcn.ipynb  graphsage.ipynb
Golang/A_Tour_of_Go/01/: exercise-loops-and-functions.go  go.mod
Golang/A_Tour_of_Go/02/: exercise-slices.go  go.mod
Golang/A_Tour_of_Go/03/: exercise-maps.go  go.mod
Golang/A_Tour_of_Go/04/: exercise-fibonacci-closure.go
Golang/A_Tour_of_Go/05/: exercise-stringer.go
Golang/A_Tour_of_Go/06/: exercise-errors.go
Golang/A_Tour_of_Go/07/: exercise-reader.go  go.mod
Golang/A_Tour_of_Go/08/: exercise-rot-reader.go
Golang/A_Tour_of_Go/09/: exercise-images.go  go.mod
Golang/A_Tour_of_Go/10/: exercise-equivalent-binary-trees.go  go.mod
Golang/A_Tour_of_Go/11/: exercise-web-crawler.go
JavaScript/: README.md
JavaScript/hello_world/: test.html  test.js
JavaScript/image_gallery/: gallery.html
MPI/: makefile
MPI/01/: makefile  mpi_hello_world.cc
MPI/02/: makefile  ping_pong.cc  ring.cc  send_recv.cc
MPI/03/: dynamic_len.cc  makefile  probe.cc
MPI/04/: broadcast.cc  makefile
MPI/05/: all_avg.cc  avg.cc  makefile
MPI/06/: makefile  random_rank.cc  tmpi_rank.cc  tmpi_rank.h
MPI/07/: makefile  reduce_avg.cc  reduce_stddev.cc
MPI/08/: groups.cc  makefile  split.cc
NCCL/: .ycm_extra_conf.py
NCCL/01/: makefile  run.sh  test  test.cc
PyTorch/extension/: kvstore.h  setup.py
PyTorch/isend_irecv/: main.py
PyTorch/new_group/: main.py  run.sh
PyTorch/pipeline_resnet50/: README.md  main.py  model.py  run.sh  schedule.py
PyTorch/rpc/: main.py  run.sh
Python/cython/: kvstore.cpp  kvstore.pyx  setup.py
Python/memory/: README.md  run.sh  test.py
Python/profile/: numpy_perf.py  test_profile.py
Python/pybind11/: .ycm_extra_conf.py  CMakeLists.txt  api.cc  benchmark_map.py  kvstore.cc  kvstore.h  run.sh  setup.py
Python/pybind11/.cache/clangd/index/: api.cc.0278D1C26D86A122.idx  attr.h.2F883C94777DB2A7.idx  buffer_info.h.04AFF83883A719AB.idx  cast.h.985C8F5A88387383.idx  class.h.02A9B62DC90EB964.idx  common.h.23564E679B698E36.idx  complex.h.16392BFE59342047.idx  descr.h.39340447DEADB49B.idx  gil.h.EC2CDBF6D81B5AD8.idx  init.h.B513E0674AB81CBA.idx  internals.h.639D5C34E4BEC8FF.idx  numpy.h.A025890E9A69AEF2.idx  options.h.3FE63D37FB54D348.idx  pybind11.h.CD304B01C5B4D225.idx  pytypes.h.8646013A2EAC1BA4.idx  stl.h.D93EE36CB534D7BD.idx  test_return_multiple.cc.8AA91027DAD67144.idx  test_vector.cc.C6E607AD725B9862.idx  type_caster_base.h.2688453FD2FA21E5.idx  typeid.h.A768C2952E575EF2.idx
Python/pybind11/01/: CMakeLists.txt  api.cc  test_return_multiple.cc  test_string.cc  test_vector.cc
Python/pybind11/02/: README.md  api.cc  test.py
Python/shared_memory/: main.py  plasma.ipynb  shm.py
cpp/abseil_example/: CMakeLists.txt  hello_world.cc
cpp/my_container/: CMakeLists.txt  my_string.h  my_vector.h  test_string.cc  test_vector.cc
(+2 files in other folders)
