cmake_minimum_required(VERSION 3.19)
project(CUDA_LEARN)
enable_language(CUDA)

file(GLOB cuda_learn_sources "*.cu")
foreach(source ${cuda_learn_sources})
    get_filename_component(target ${source} NAME_WLE)
    add_executable(${target} ${source})
    # set_source_files_properties(${source} PROPERTIES LANGUAGE CUDA)
endforeach()
